--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             background: #333;
             color: white;
             white-space: nowrap;
+            box-sizing: border-box;
         }
         .marquee span {
             display: inline-block;
@@ -24,14 +25,15 @@
             animation: marquee 15s linear infinite;
         }
         @keyframes marquee {
-            0%   { transform: translate(0, 0); }
-            100% { transform: translate(-100%, 0); }
+            0% { transform: translateX(100%); }
+            100% { transform: translateX(-100%); }
         }
         .search-bar {
             padding: 10px;
             background: #007BFF;
             color: white;
             text-align: center;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
         }
         .search-bar input {
             width: 70%;
@@ -39,6 +41,7 @@
             font-size: 1em;
             border: none;
             border-radius: 5px;
+            margin-right: 10px;
         }
         .search-bar button {
             padding: 10px 20px;
@@ -65,6 +68,10 @@
         }
         section {
             margin-bottom: 50px;
+            display: none;
+        }
+        section.active {
+            display: block;
         }
         .calculator, .currency-converter, .world-clock, .world-wealth, .moon-cycle, .water-sources, .temperature, .sun-times, .sea-level {
             max-width: 400px;
@@ -238,10 +245,9 @@
             </div>
         </section>
         <section id="world-clock" class="searchable">
-            <h2>Weltzeitzonen-Uhr</h2>
+            <h2>Weltzeituhr</h2>
             <div class="world-clock">
                 <select id="timezone">
-                    <option value="Pacific/Honolulu">Honolulu (GMT-10:00)</option>
                     <option value="America/Anchorage">Anchorage (GMT-09:00)</option>
                     <option value="America/Los_Angeles">Los Angeles (GMT-08:00)</option>
                     <option value="America/Denver">Denver (GMT-07:00)</option>
@@ -442,7 +448,7 @@
                 const data = await response.json();
                 document.getElementById('sea-level').textContent = `Aktueller Meeresspiegel: ${data.seaLevel} m`;
             } catch (error) {
-                document.getElementById('sea-level').textContent = 'Fehler beim Laden der Meeresspiegeldaten';
+                document.getElementById('sea-level').textContent = 'Fehler beim Laden der Meeresspiegel-Daten';
             }
         }
 
@@ -452,9 +458,9 @@
             sections.forEach(section => {
                 const sectionTitle = section.querySelector('h2').textContent.toLowerCase();
                 if (sectionTitle.includes(query)) {
-                    section.style.display = 'block';
+                    section.classList.add('active');
                 } else {
-                    section.style.display = 'none';
+                    section.classList.remove('active');
                 }
             });
         }
