--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
     <header>
-        <h1>Willkommen auf der Informationsseite</h1>
+        <h1>Willkommen auf der Informationsseite Von Bibelfratz</h1>
         <div id="search-bar">
             <input type="text" id="search-input" placeholder="Suchbegriff eingeben...">
             <button onclick="search()">Suchen</button>
