--- a/index.html
+++ b/index.html
@@ -47,11 +47,27 @@
             position: relative;
             clip-path: circle(50px at 50px 50px);
         }
+        .info {
+            margin: 20px;
+            padding: 20px;
+            border: 1px solid #ccc;
+            background-color: #f9f9f9;
+        }
+        .info h2 {
+            margin-top: 0;
+        }
+        .info a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        .info a:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
     <header>
-        <h1>Willkommen auf der Informationsseite Von Bibelfratz</h1>
+        <h1>Willkommen auf der Informationsseite</h1>
         <div id="search-bar">
             <input type="text" id="search-input" placeholder="Suchbegriff eingeben...">
             <button onclick="search()">Suchen</button>
@@ -164,14 +180,42 @@
         </div>
     </div>
 
+    <div id="general-info" class="section">
+        <h2>Allgemeine Informationen</h2>
+        <div class="info">
+            <h2>Mondzyklus</h2>
+            <p>Der Mondzyklus, auch als Mondphasen bekannt, dauert ungefähr 29,5 Tage und umfasst die Phasen Neumond, zunehmender Mond, Vollmond und abnehmender Mond.</p>
+            <a href="https://de.wikipedia.org/wiki/Mondphasen" target="_blank">Mehr erfahren</a>
+        </div>
+        <div class="info">
+            <h2>Durchschnittliche Erdtemperatur</h2>
+            <p>Die durchschnittliche Erdtemperatur ist die durchschnittliche Temperatur der Erde, gemessen über einen langen Zeitraum. Sie ist ein wichtiger Indikator für den Klimawandel.</p>
+            <a href="https://de.wikipedia.org/wiki/Klimawandel" target="_blank">Mehr erfahren</a>
+        </div>
+        <div class="info">
+            <h2>Weltweite Währungsumrechnungen</h2>
+            <p>Die Umrechnung von Währungen ist entscheidend für internationale Handelsgeschäfte und Reiseplanung. Wechselkurse können stark schwanken.</p>
+            <a href="https://de.wikipedia.org/wiki/Wechselkurs" target="_blank">Mehr erfahren</a>
+        </div>
+        <div class="info">
+            <h2>Meeresspiegel</h2>
+            <p>Der Meeresspiegel ist die durchschnittliche Höhe des Meerwassers in den Ozeanen und Meeren. Er beeinflusst Küstenregionen und kann durch den Klimawandel ansteigen.</p>
+            <a href="https://de.wikipedia.org/wiki/Meeresspiegel" target="_blank">Mehr erfahren</a>
+        </div>
+        <div class="info">
+            <h2>Sonnenaufgang und Sonnenuntergang</h2>
+            <p>Sonnenaufgang und Sonnenuntergang sind tägliche Ereignisse, die durch die Erdrotation und die Position auf der Erde bestimmt werden.</p>
+            <a href="https://de.wikipedia.org/wiki/Sonnenaufgang_und_Sonnenuntergang" target="_blank">Mehr erfahren</a>
+        </div>
+    </div>
+
     <script>
-        let currentOperation = '';
-        let previousValue = '';
         let currentValue = '';
+        let previousValue = '';
+        let currentOperation = '';
 
         function appendNumber(number) {
-            if (currentValue.includes('.') && number === '.') return;
-            currentValue = currentValue.toString() + number.toString();
+            currentValue += number;
             updateDisplay();
         }
 
@@ -183,31 +227,32 @@
             currentOperation = operation;
             previousValue = currentValue;
             currentValue = '';
+            updateDisplay();
         }
 
         function compute() {
-            let computation;
+            let result;
             const prev = parseFloat(previousValue);
             const current = parseFloat(currentValue);
             if (isNaN(prev) || isNaN(current)) return;
             switch (currentOperation) {
                 case '+':
-                    computation = prev + current;
+                    result = prev + current;
                     break;
                 case '-':
-                    computation = prev - current;
+                    result = prev - current;
                     break;
                 case '*':
-                    computation = prev * current;
+                    result = prev * current;
                     break;
                 case '/':
-                    computation = prev / current;
+                    result = prev / current;
                     break;
                 default:
                     return;
             }
-            currentValue = computation;
-            currentOperation = undefined;
+            currentValue = result;
+            currentOperation = '';
             previousValue = '';
             updateDisplay();
         }
