--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            background: #f4f4f4;
         }
         header {
             background: #333;
             color: #fff;
             padding: 10px;
-            position: relative;
             text-align: center;
         }
         #search-bar {
@@ -35,33 +35,58 @@
             padding: 20px;
             margin: 20px;
             border: 1px solid #ccc;
+            background: #fff;
+            border-radius: 5px;
         }
         .active {
             display: block;
         }
-        .moon-phase {
-            width: 100px;
-            height: 100px;
-            background: #ccc;
-            border-radius: 50%;
-            position: relative;
-            clip-path: circle(50px at 50px 50px);
+        .calculator {
+            max-width: 300px;
+            margin: auto;
         }
-        .info {
-            margin: 20px;
+        .calculator input {
+            width: 100%;
+            padding: 10px;
+            font-size: 20px;
+            text-align: right;
+            margin-bottom: 10px;
+        }
+        .calculator button {
+            width: 25%;
             padding: 20px;
-            border: 1px solid #ccc;
-            background-color: #f9f9f9;
+            font-size: 18px;
+            cursor: pointer;
+            border: 1px solid #ddd;
+            background: #f0f0f0;
+            border-radius: 5px;
+            margin: 2px;
         }
-        .info h2 {
-            margin-top: 0;
+        .calculator button.operator {
+            background: #ffa;
         }
-        .info a {
-            color: #007bff;
-            text-decoration: none;
+        .calculator button.equals {
+            background: #0f0;
+            color: #fff;
         }
-        .info a:hover {
-            text-decoration: underline;
+        .world-clock {
+            max-width: 300px;
+            margin: auto;
+        }
+        .world-clock select, .world-clock input {
+            width: 100%;
+            padding: 10px;
+            font-size: 16px;
+            margin-bottom: 10px;
+        }
+        .world-clock button {
+            padding: 10px;
+            font-size: 16px;
+            cursor: pointer;
+            background: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
         }
     </style>
 </head>
@@ -77,45 +102,42 @@
         </div>
     </header>
 
+    <!-- Taschenrechner Sektion -->
     <div id="calculator" class="section">
         <h2>Taschenrechner</h2>
         <div class="calculator">
-            <input type="text" id="display" class="display" disabled>
-            <div class="buttons">
-                <button onclick="appendNumber('1')">1</button>
-                <button onclick="appendNumber('2')">2</button>
-                <button onclick="appendNumber('3')">3</button>
-                <button onclick="chooseOperation('+')">+</button>
-                <button onclick="appendNumber('4')">4</button>
-                <button onclick="appendNumber('5')">5</button>
-                <button onclick="appendNumber('6')">6</button>
-                <button onclick="chooseOperation('-')">-</button>
+            <input type="text" id="display" disabled>
+            <div>
                 <button onclick="appendNumber('7')">7</button>
                 <button onclick="appendNumber('8')">8</button>
                 <button onclick="appendNumber('9')">9</button>
+                <button onclick="chooseOperation('/')">/</button>
+            </div>
+            <div>
+                <button onclick="appendNumber('4')">4</button>
+                <button onclick="appendNumber('5')">5</button>
+                <button onclick="appendNumber('6')">6</button>
                 <button onclick="chooseOperation('*')">*</button>
+            </div>
+            <div>
+                <button onclick="appendNumber('1')">1</button>
+                <button onclick="appendNumber('2')">2</button>
+                <button onclick="appendNumber('3')">3</button>
+                <button onclick="chooseOperation('-')">-</button>
+            </div>
+            <div>
                 <button onclick="appendNumber('0')">0</button>
                 <button onclick="appendNumber('.')">.</button>
                 <button class="clear" onclick="clearDisplay()">C</button>
-                <button class="operator" onclick="chooseOperation('/')">/</button>
+                <button onclick="chooseOperation('+')">+</button>
+            </div>
+            <div>
                 <button class="equals" onclick="compute()">=</button>
             </div>
         </div>
     </div>
 
-    <div id="currency-converter" class="section">
-        <h2>Währungsrechner (Dollar <-> Euro)</h2>
-        <div class="currency-converter">
-            <input type="number" id="amount" placeholder="Betrag">
-            <select id="currency">
-                <option value="usdToEur">Dollar zu Euro</option>
-                <option value="eurToUsd">Euro zu Dollar</option>
-            </select>
-            <button onclick="convertCurrency()">Umrechnen</button>
-            <input type="text" id="result" class="display" disabled placeholder="Ergebnis">
-        </div>
-    </div>
-
+    <!-- Weltzeituhr Sektion -->
     <div id="world-clock" class="section">
         <h2>Weltzeituhr</h2>
         <div class="world-clock">
@@ -125,7 +147,6 @@
                 <option value="America/Denver">Denver (GMT-07:00)</option>
                 <option value="America/Chicago">Chicago (GMT-06:00)</option>
                 <option value="America/New_York">New York (GMT-05:00)</option>
-                <option value="America/Argentina/Buenos_Aires">Buenos Aires (GMT-03:00)</option>
                 <option value="Europe/London">London (GMT+00:00)</option>
                 <option value="Europe/Paris">Paris (GMT+01:00)</option>
                 <option value="Europe/Berlin">Berlin (GMT+02:00)</option>
@@ -133,79 +154,7 @@
                 <option value="Australia/Sydney">Sydney (GMT+10:00)</option>
             </select>
             <button onclick="showTime()">Zeitzone anzeigen</button>
-            <input type="text" id="clock" class="display" disabled placeholder="Uhrzeit">
-        </div>
-    </div>
-
-    <div id="moon-cycle" class="section">
-        <h2>Mondzyklus</h2>
-        <div class="moon-cycle">
-            <div class="moon-phase"></div>
-        </div>
-    </div>
-
-    <div id="temperature" class="section">
-        <h2>Durchschnittliche Erdtemperatur</h2>
-        <div class="temperature">
-            <p id="temperature">Lade Temperaturdaten...</p>
-        </div>
-    </div>
-
-    <div id="sun-times" class="section">
-        <h2>Sonnenaufgang und Sonnenuntergang</h2>
-        <div class="sun-times">
-            <input type="text" id="sunrise" class="display" disabled placeholder="Sonnenaufgang">
-            <input type="text" id="sunset" class="display" disabled placeholder="Sonnenuntergang">
-            <button onclick="fetchSunTimes()">Aktualisieren</button>
-        </div>
-    </div>
-
-    <div id="sea-level" class="section">
-        <h2>Meeresspiegel</h2>
-        <div class="sea-level">
-            <p id="sea-level">Lade Meeresspiegel-Daten...</p>
-        </div>
-    </div>
-
-    <div id="water-sources" class="section">
-        <h2>Alle Trinkwassersorten der Welt nach Ort und Preis</h2>
-        <div class="water-sources">
-            <ul>
-                <li>Evian - Evian-les-Bains, Frankreich <span>€0.50/L</span></li>
-                <li>Fiji - Viti Levu, Fidschi <span>$0.70/L</span></li>
-                <li>Voss - Iveland, Norwegen <span>€1.00/L</span></li>
-                <li>San Pellegrino - San Pellegrino Terme, Italien <span>€0.80/L</span></li>
-                <li>Gerolsteiner - Gerolstein, Deutschland <span>€0.60/L</span></li>
-            </ul>
-        </div>
-    </div>
-
-    <div id="general-info" class="section">
-        <h2>Allgemeine Informationen</h2>
-        <div class="info">
-            <h2>Mondzyklus</h2>
-            <p>Der Mondzyklus, auch als Mondphasen bekannt, dauert ungefähr 29,5 Tage und umfasst die Phasen Neumond, zunehmender Mond, Vollmond und abnehmender Mond.</p>
-            <a href="https://de.wikipedia.org/wiki/Mondphasen" target="_blank">Mehr erfahren</a>
-        </div>
-        <div class="info">
-            <h2>Durchschnittliche Erdtemperatur</h2>
-            <p>Die durchschnittliche Erdtemperatur ist die durchschnittliche Temperatur der Erde, gemessen über einen langen Zeitraum. Sie ist ein wichtiger Indikator für den Klimawandel.</p>
-            <a href="https://de.wikipedia.org/wiki/Klimawandel" target="_blank">Mehr erfahren</a>
-        </div>
-        <div class="info">
-            <h2>Weltweite Währungsumrechnungen</h2>
-            <p>Die Umrechnung von Währungen ist entscheidend für internationale Handelsgeschäfte und Reiseplanung. Wechselkurse können stark schwanken.</p>
-            <a href="https://de.wikipedia.org/wiki/Wechselkurs" target="_blank">Mehr erfahren</a>
-        </div>
-        <div class="info">
-            <h2>Meeresspiegel</h2>
-            <p>Der Meeresspiegel ist die durchschnittliche Höhe des Meerwassers in den Ozeanen und Meeren. Er beeinflusst Küstenregionen und kann durch den Klimawandel ansteigen.</p>
-            <a href="https://de.wikipedia.org/wiki/Meeresspiegel" target="_blank">Mehr erfahren</a>
-        </div>
-        <div class="info">
-            <h2>Sonnenaufgang und Sonnenuntergang</h2>
-            <p>Sonnenaufgang und Sonnenuntergang sind tägliche Ereignisse, die durch die Erdrotation und die Position auf der Erde bestimmt werden.</p>
-            <a href="https://de.wikipedia.org/wiki/Sonnenaufgang_und_Sonnenuntergang" target="_blank">Mehr erfahren</a>
+            <input type="text" id="clock" disabled placeholder="Uhrzeit">
         </div>
     </div>
 
@@ -268,27 +217,6 @@
             updateDisplay();
         }
 
-        async function convertCurrency() {
-            const amount = document.getElementById('amount').value;
-            const conversionType = document.getElementById('currency').value;
-            if (!amount) return;
-            try {
-                let result;
-                if (conversionType === 'usdToEur') {
-                    const response = await fetch('https://api.exchangerate-api.com/v4/latest/USD');
-                    const data = await response.json();
-                    result = (amount * data.rates.EUR).toFixed(2);
-                } else if (conversionType === 'eurToUsd') {
-                    const response = await fetch('https://api.exchangerate-api.com/v4/latest/EUR');
-                    const data = await response.json();
-                    result = (amount * data.rates.USD).toFixed(2);
-                }
-                document.getElementById('result').value = result;
-            } catch (error) {
-                document.getElementById('result').value = 'Fehler';
-            }
-        }
-
         async function showTime() {
             const timezone = document.getElementById('timezone').value;
             try {
@@ -306,71 +234,8 @@
             }
         }
 
-        async function fetchTemperature() {
-            try {
-                const response = await fetch('https://api.globaltemperature.org/latest');
-                const data = await response.json();
-                document.getElementById('temperature').textContent = `${data.temperature} °C`;
-            } catch (error) {
-                document.getElementById('temperature').textContent = 'Fehler beim Laden der Temperaturdaten';
-            }
-        }
-
-        async function fetchSunTimes() {
-            // Beispielkoordinaten für Berlin
-            const latitude = 52.5200;
-            const longitude = 13.4050;
-            try {
-                const response = await fetch(`https://api.sunrise-sunset.org/json?lat=${latitude}&lng=${longitude}`);
-                const data = await response.json();
-                document.getElementById('sunrise').value = data.results.sunrise;
-                document.getElementById('sunset').value = data.results.sunset;
-            } catch (error) {
-                document.getElementById('sunrise').value = 'Fehler';
-                document.getElementById('sunset').value = 'Fehler';
-            }
-        }
-
-        async function fetchSeaLevel() {
-            try {
-                const response = await fetch('https://api.sealevel.org/current');
-                const data = await response.json();
-                document.getElementById('sea-level').textContent = `${data.sea_level} m`;
-            } catch (error) {
-                document.getElementById('sea-level').textContent = 'Fehler beim Laden der Meeresspiegel-Daten';
-            }
-        }
-
-        function updateMoonPhase() {
-            const now = new Date();
-            const moonPhase = (now.getDate() % 29.53) / 29.53;
-            const moonPhaseDiv = document.querySelector('.moon-phase');
-            moonPhaseDiv.style.clipPath = `circle(${50 - moonPhase * 50}px at 50px 50px)`;
-        }
-
-        function search() {
-            const query = document.getElementById('search-input').value.toLowerCase();
-            const sections = document.querySelectorAll('div.section');
-            let found = false;
-            sections.forEach(section => {
-                const sectionContent = section.textContent.toLowerCase();
-                if (sectionContent.includes(query)) {
-                    section.classList.add('active');
-                    found = true;
-                } else {
-                    section.classList.remove('active');
-                }
-            });
-            if (!found) {
-                alert('Kein Ergebnis gefunden');
-            }
-        }
-
         document.addEventListener('DOMContentLoaded', () => {
-            fetchTemperature();
-            updateMoonPhase();
-            fetchSunTimes();
-            fetchSeaLevel();
+            // Hier können Initialisierungen hinzugefügt werden, falls erforderlich
         });
     </script>
 </body>
