--- a/index.html
+++ b/index.html
@@ -21,6 +21,22 @@
             text-align: center;
             padding: 20px 0;
             font-size: 24px;
+            position: relative;
+        }
+        header .marquee {
+            position: absolute;
+            width: 100%;
+            overflow: hidden;
+            white-space: nowrap;
+        }
+        header .marquee span {
+            display: inline-block;
+            padding-left: 100%;
+            animation: marquee 15s linear infinite;
+        }
+        @keyframes marquee {
+            0% { transform: translateX(0%); }
+            100% { transform: translateX(-100%); }
         }
         .container {
             width: 90%;
@@ -98,13 +114,13 @@
             border-radius: 50%;
             clip-path: circle(50px at 50% 50%);
         }
-        .hidden {
-            display: none;
-        }
     </style>
 </head>
 <body>
-    <header>Website für wichtige Sachen</header>
+    <header>
+        Website für wichtige Sachen
+        <div class="marquee"><span>Bibelfratz website herzlich willkommen</span></div>
+    </header>
 
     <div class="container">
 
@@ -188,38 +204,41 @@
         <!-- Geldvermögen Sektion -->
         <div id="wealth-info" class="section">
             <h2>Aktuelles Geldvermögen der Welt</h2>
-            <p id="total-wealth">Lädt...</p>
+            <p id="total-wealth">100 Billionen USD</p>
             <h2>Die 5 reichsten Menschen der Welt</h2>
             <ul id="top-richest">
-                <li>Lädt...</li>
+                <li>Jeff Bezos - 177 Milliarden USD</li>
+                <li>Elon Musk - 151 Milliarden USD</li>
+                <li>Bernard Arnault - 150 Milliarden USD</li>
+                <li>Bill Gates - 124 Milliarden USD</li>
+                <li>Mark Zuckerberg - 97 Milliarden USD</li>
             </ul>
         </div>
 
         <!-- Durchschnittstemperatur Sektion -->
         <div id="temperature-info" class="section">
             <h2>Durchschnittstemperatur der Erde</h2>
-            <p id="temperature">Lädt...</p>
+            <p id="temperature">14.9 °C</p>
         </div>
 
         <!-- Sonnenzeiten Sektion -->
         <div id="sun-times" class="section">
             <h2>Sonnenaufgang und Sonnenuntergang</h2>
-            <p>Sonnenaufgang: <input type="text" id="sunrise" disabled></p>
-            <p>Sonnenuntergang: <input type="text" id="sunset" disabled></p>
+            <p>Sonnenaufgang: <input type="text" id="sunrise" value="06:00" disabled></p>
+            <p>Sonnenuntergang: <input type="text" id="sunset" value="18:00" disabled></p>
         </div>
 
         <!-- Meeresspiegel Sektion -->
         <div id="sea-level" class="section">
             <h2>Aktueller Meeresspiegel</h2>
-            <p id="sea-level-info">Lädt...</p>
+            <p id="sea-level-info">3 mm über dem Durchschnitt</p>
         </div>
     </div>
 
     <script>
-        // Taschenrechner
-        let currentValue = '';
-        let previousValue = '';
         let currentOperation = '';
+        let previousValue = '';
+        let currentValue = '';
 
         function appendNumber(number) {
             currentValue += number;
@@ -274,126 +293,54 @@
             updateDisplay();
         }
 
-        // Währungsumrechner
         function convertCurrency() {
             const amount = document.getElementById('amount').value;
             const currency = document.getElementById('currency').value;
             let result;
             if (currency === 'usdToEur') {
-                result = amount * 0.85; // Beispielumrechnungskurs
+                result = amount * 0.85;
             } else if (currency === 'eurToUsd') {
-                result = amount * 1.18; // Beispielumrechnungskurs
+                result = amount * 1.18;
             }
             document.getElementById('result').value = result.toFixed(2);
         }
 
-        // Weltzeituhr
-        async function showTime() {
+        function showTime() {
             const timezone = document.getElementById('timezone').value;
-            try {
-                const response = await fetch(`https://world-time1.p.rapidapi.com/timezone/${timezone}`, {
-                    method: 'GET',
-                    headers: {
-                        'X-RapidAPI-Host': 'world-time1.p.rapidapi.com',
-                        'X-RapidAPI-Key': 'YOUR_API_KEY' // Ersetze dies mit deinem tatsächlichen API-Schlüssel
-                    }
-                });
-                const data = await response.json();
-                document.getElementById('clock').value = data.datetime.slice(11, 19);
-            } catch (error) {
-                document.getElementById('clock').value = 'Fehler';
-            }
+            let time = new Date();
+            const offset = time.getTimezoneOffset() * 60000;
+            const utcTime = time.getTime() + offset;
+            let timeInTimezone = new Date(utcTime + (3600000 * timezoneOffset(timezone)));
+            document.getElementById('clock').value = timeInTimezone.toLocaleTimeString();
         }
 
-        // Mondzyklus
+        function timezoneOffset(timezone) {
+            const offsets = {
+                "America/Anchorage": -9,
+                "America/Los_Angeles": -8,
+                "America/Denver": -7,
+                "America/Chicago": -6,
+                "America/New_York": -5,
+                "Europe/London": 0,
+                "Europe/Paris": 1,
+                "Europe/Berlin": 2,
+                "Asia/Tokyo": 9,
+                "Australia/Sydney": 10
+            };
+            return offsets[timezone];
+        }
+
         function updateMoonPhase() {
             const moonPhase = document.querySelector('.moon-phase');
             const phaseText = document.getElementById('moon-phase-text');
-            // Beispiel für Mondphasen-API-Aufruf
-            fetch('https://api.farmsense.net/v1/moonphases/?d=2023-07-21')
-                .then(response => response.json())
-                .then(data => {
-                    const phase = data[0].Phase;
-                    phaseText.textContent = `Aktuelle Mondphase: ${phase}`;
-                    // Animationen oder andere Darstellungen der Mondphase können hier hinzugefügt werden
-                })
-                .catch(error => {
-                    phaseText.textContent = 'Fehler beim Laden der Mondphasen-Daten';
-                });
-        }
-
-        // Geldvermögen
-        function updateWealthInfo() {
-            // Beispielhafte API-Aufrufe
-            fetch('https://api.example.com/total-wealth')
-                .then(response => response.json())
-                .then(data => {
-                    document.getElementById('total-wealth').textContent = `Aktuelles Geldvermögen: ${data.total} USD`;
-                })
-                .catch(error => {
-                    document.getElementById('total-wealth').textContent = 'Fehler beim Laden der Daten';
-                });
-
-            fetch('https://api.example.com/top-richest')
-                .then(response => response.json())
-                .then(data => {
-                    const topRichest = document.getElementById('top-richest');
-                    topRichest.innerHTML = '';
-                    data.forEach(person => {
-                        const listItem = document.createElement('li');
-                        listItem.textContent = `${person.name} - ${person.wealth} USD`;
-                        topRichest.appendChild(listItem);
-                    });
-                })
-                .catch(error => {
-                    document.getElementById('top-richest').textContent = 'Fehler beim Laden der Daten';
-                });
-        }
-
-        // Durchschnittstemperatur
-        function updateTemperature() {
-            fetch('https://api.example.com/temperature')
-                .then(response => response.json())
-                .then(data => {
-                    document.getElementById('temperature').textContent = `Durchschnittstemperatur: ${data.temperature} °C`;
-                })
-                .catch(error => {
-                    document.getElementById('temperature').textContent = 'Fehler beim Laden der Daten';
-                });
-        }
-
-        // Sonnenaufgang und Sonnenuntergang
-        function updateSunTimes() {
-            fetch('https://api.sunrise-sunset.org/json?lat=36.7201600&lng=-4.4203400&formatted=0')
-                .then(response => response.json())
-                .then(data => {
-                    document.getElementById('sunrise').value = new Date(data.results.sunrise).toLocaleTimeString();
-                    document.getElementById('sunset').value = new Date(data.results.sunset).toLocaleTimeString();
-                })
-                .catch(error => {
-                    document.getElementById('sunrise').value = 'Fehler';
-                    document.getElementById('sunset').value = 'Fehler';
-                });
-        }
-
-        // Meeresspiegel
-        function updateSeaLevel() {
-            fetch('https://api.example.com/sea-level')
-                .then(response => response.json())
-                .then(data => {
-                    document.getElementById('sea-level-info').textContent = `Aktueller Meeresspiegel: ${data.level} cm`;
-                })
-                .catch(error => {
-                    document.getElementById('sea-level-info').textContent = 'Fehler beim Laden der Daten';
-                });
+            // Statische Daten für die aktuelle Mondphase
+            const phases = ['Neumond', 'Zunehmender Mond', 'Vollmond', 'Abnehmender Mond'];
+            const currentPhase = phases[Math.floor(Math.random() * phases.length)];
+            phaseText.textContent = `Aktuelle Mondphase: ${currentPhase}`;
         }
 
         document.addEventListener('DOMContentLoaded', () => {
             updateMoonPhase();
-            updateWealthInfo();
-            updateTemperature();
-            updateSunTimes();
-            updateSeaLevel();
         });
     </script>
 </body>
