--- a/index.html
+++ b/index.html
@@ -195,34 +195,34 @@
         <!-- Geldvermögen Sektion -->
         <div id="wealth-info" class="section">
             <h2>Aktuelles Geldvermögen der Welt</h2>
-            <p id="total-wealth">100 Billionen USD</p>
+            <p id="total-wealth">418 Billionen USD (Stand 2023)</p>
             <h2>Die 5 reichsten Menschen der Welt</h2>
             <ul id="top-richest">
-                <li>Bernard Arnault - 211 Milliarden USD</li>
-                <li>Elon Musk - 198 Milliarden USD</li>
-                <li>Jeff Bezos - 138 Milliarden USD</li>
-                <li>Bill Gates - 124 Milliarden USD</li>
-                <li>Mark Zuckerberg - 115 Milliarden USD</li>
+                <li>Bernard Arnault - 211 Milliarden USD (2024)</li>
+                <li>Elon Musk - 198 Milliarden USD (2024)</li>
+                <li>Jeff Bezos - 138 Milliarden USD (2024)</li>
+                <li>Bill Gates - 124 Milliarden USD (2024)</li>
+                <li>Mark Zuckerberg - 115 Milliarden USD (2024)</li>
             </ul>
         </div>
 
         <!-- Durchschnittstemperatur Sektion -->
         <div id="temperature-info" class="section">
             <h2>Durchschnittstemperatur der Erde</h2>
-            <p id="temperature">14.9 °C</p>
+            <p id="temperature">14.9 °C (2023)</p>
         </div>
 
         <!-- Sonnenzeiten Sektion -->
         <div id="sun-times" class="section">
             <h2>Sonnenaufgang und Sonnenuntergang</h2>
-            <p>Sonnenaufgang: <input type="text" id="sunrise" value="06:00" disabled></p>
-            <p>Sonnenuntergang: <input type="text" id="sunset" value="18:00" disabled></p>
+            <p>Sonnenaufgang: <span id="sunrise">05:40</span></p>
+            <p>Sonnenuntergang: <span id="sunset">20:15</span></p>
         </div>
 
         <!-- Meeresspiegel Sektion -->
         <div id="sea-level" class="section">
             <h2>Aktueller Meeresspiegel</h2>
-            <p id="sea-level-info">3 mm über dem Durchschnitt</p>
+            <p id="sea-level-info">3 mm über dem Durchschnitt (2023)</p>
         </div>
     </div>
 
