--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 <body>
     <header>
         Website für wichtige Sachen
-        <div class="marquee"><span>Bibelfratz website herzlich willkommen</span></div>
+        <div class="marquee"><span>Bibelfratz website herzlich willkommen == Diese Website Dient Zur information es ist noch nicht alles perfekt ;)</span></div>
     </header>
 
     <div class="container">
@@ -195,7 +195,7 @@
         <!-- Geldvermögen Sektion -->
         <div id="wealth-info" class="section">
             <h2>Aktuelles Geldvermögen der Welt</h2>
-            <p id="total-wealth">418 Billionen USD (Stand 2023)</p>
+            <p id="total-wealth">418 Billionen USD (Stand 2024)</p>
             <h2>Die 5 reichsten Menschen der Welt</h2>
             <ul id="top-richest">
                 <li>Bernard Arnault - 211 Milliarden USD (2024)</li>
@@ -209,7 +209,7 @@
         <!-- Durchschnittstemperatur Sektion -->
         <div id="temperature-info" class="section">
             <h2>Durchschnittstemperatur der Erde</h2>
-            <p id="temperature">14.9 °C (2023)</p>
+            <p id="temperature">14.9 °C (2024)</p>
         </div>
 
         <!-- Sonnenzeiten Sektion -->
@@ -222,7 +222,7 @@
         <!-- Meeresspiegel Sektion -->
         <div id="sea-level" class="section">
             <h2>Aktueller Meeresspiegel</h2>
-            <p id="sea-level-info">3 mm über dem Durchschnitt (2023)</p>
+            <p id="sea-level-info">3 mm über dem Durchschnitt (2024)</p>
         </div>
     </div>
 
