--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 </head>
 <body>
     <header>
-        Website für wichtige Sachen
+        Website Der Informationen
         <div class="marquee"><span>Bibelfratz website herzlich willkommen == Diese Website Dient Zur information es ist noch nicht alles perfekt ;)</span></div>
     </header>
 
