--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
         function updateMoonPhase() {
             const phaseImages = {
                 'new': 'https://github.com/Bibelfratz1/Information.com/raw/main/new_moon.png',
-                'waxing': 'https://github.com/Bibelfratz1/Information.com/raw/main/waxing_moon.png',
+                'waxing': 'https://github.com/Bibelfratz1/Information.com/blob/main/last_quarter.pngg',
                 'full': 'https://github.com/Bibelfratz1/Information.com/raw/main/full_moon.png',
                 'waning': 'https://github.com/Bibelfratz1/Information.com/blob/main/first_quarter.png'
             };
