--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         <div id="moon-phase" class="section">
             <h2>Mondzyklus</h2>
             <div class="moon-phase">
-                <img id="moon-image" src="https://github.com/Bibelfratz1/Information.com/raw/main/new_moon.png" alt="Mondphase">
+                <img id="moon-image" src="https://github.com/Bibelfratz1/Information.com/blob/main/new_moon.png" alt="Mondphase">
             </div>
             <p id="moon-phase-text"></p>
         </div>
